--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
             width: auto;
             height: auto;
             display: block;
+            margin: 0 auto;
         }
     </style>
 </head>
 <body>
-    <video autoplay playsinline>
+    <video width="320" height="240" controls autoplay>
         <source src="christmasmp4.mp4" type="video/mp4">
+        get someone else to scan it
     </video>
+</video>
 
 </body>
 </html>
